fixing dark mode on bg

--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,21 @@
 @import "tailwindcss";
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap");
 
-/* Light mode colors */
-:root {
-  --color-custom-blue: hsl(209, 23%, 22%);
-  --color-custom-dark-blue: hsl(207, 26%, 17%);
-  --color-custom-light-background: #ffffff;
-  --color-text-light: #ffffff; /* White text color in light mode */
-  --color-text-black: #000000; /* Black text color in light mode */
+@import "tailwindcss";
+
+/* prevent automatic darkmode */
+@custom-variant dark (&:where(.dark, .dark *));
+
+@theme {
+  /* Setup colors variables */
+  --color-dark-blue: hsl(209, 23%, 22%); /* Dark Mode Elements*/
+  --color-very-darkmode-blue: hsl(207, 26%, 17%); /* Dark Mode Background */
+  --color-very-dark-blue: hsl(200, 15%, 8%); /* Light Mode Text */
+  --color-dark-gray: hsl(0, 0%, 52%); /* Light Mode Input */
+  --color-very-light-gray: hsl(0, 0%, 98%); /* Light Mode Background */
+  --color-white: #f0f0f0f; /* Dark Mode Text & Light Mode Elements */
+  --color-black: #000;
 }
-
-/* Dark mode overrides */
-.dark {
-  --color-custom-blue: hsl(207, 26%, 17%); /* Dark mode blue */
-  --color-custom-dark-blue: #ffffff; /* Light mode background */
-  --color-text-light: #000000; /* Black text color in dark mode */
-  --color-text-black: #ffffff; /* White text color in dark mode */
+body {
+  font-family: "Nunito Sans", sans-serif;
 }
